--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-    create_infrastructure: 
+    #create_infrastructure: 
       docker:
         - image: amazon/aws-cli
       steps:
@@ -12,7 +12,26 @@ jobs:
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
+    
+    configure_infrastructure: 
+      docker: 
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - add_ssh_keys:
+            # You can get this ID in the section where you registered the SSH Key
+            fingerprints: ["b8:b7:fd:9f:90:3b:e2:4f:9b:18:1c:e9:99:5f:d3:ea"] 
+        - run:
+            name: Install Ansible
+            command: apk add --update ansible
+            # Install Ansible
+        - run:
+            name: Run Playbook and Configure server
+            command: ansible-playbook -i inventory.txt main_remote.yml
+            # Your command              
 workflows:
   myWorkflow:
     jobs:
-      - create_infrastructure
+      # - create_infrastructure
+      - configure_infrastructure
+      
