--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
   version: 2.1
   jobs:
-      #create_infrastructure: 
+      create_infrastructure: 
         docker:
           - image: amazon/aws-cli
         steps:
@@ -32,6 +32,6 @@
   workflows:
     myWorkflow:
       jobs:
-        # - create_infrastructure
+        #- create_infrastructure
         - configure_infrastructure
-      
+            
