--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,29 @@
               # Install Ansible
           - run:
               name: Run Playbook and Configure server
-              command: ansible-playbook -i inventory.txt main-remote.yml
-              # Your command              
+              command: ansible-playbook -i inventory.txt main_remote.yml
+              # Your command
+
+      smoke_test:
+        docker:
+          - image: alpine:latest
+        steps:
+          - run: apk add --update curl
+          - run:
+              name: smoke test
+              command: |
+                  URL="https://blog.udacity.com/"
+                  # Test if website exists
+                  if curl -s --head ${URL} 
+                  then
+                    return 0
+                  else
+                    return 1
+                  fi
+
   workflows:
     myWorkflow:
       jobs:
         #- create_infrastructure
-        - configure_infrastructure
-            
+        #- configure_infrastructure
+        - smoke_test
