--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@
           - checkout
           - run:
             name: Execute bucket.yml - Create Cloudformation Stack
-            command:
+            command: |
                 aws cloudformation deploy \
                 --template-file bucket.yml \
                 --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
