--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,11 +65,30 @@
                 --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
                 --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"     
 
+      get_last_deployment_id:
+        docker:
+          - image: amazon/aws-cli
+        steps:
+          - checkout
+          - run: yum install -y tar gzip
+          - run:
+              name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
+              command: |
+                aws cloudformation \
+                list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
+                --no-paginate --output text > ~/textfile.txt
+          - persist_to_workspace:
+              root: ~/
+              paths: 
+                - textfile.txt 
+
   workflows:
     myWorkflow:
       jobs:
         #- create_infrastructure
         #- configure_infrastructure
         #- smoke_test
-        - create_and_deploy_front_end
+        #- create_and_deploy_front_end
+        - get_last_deployment_id
+        
       
