--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,20 @@
           - persist_to_workspace:
               root: ~/
               paths: 
-                - textfile.txt 
+                - textfile.txt
+      
+      promote_to_production:
+        docker:
+          - image: amazon/aws-cli
+        steps:
+          - checkout
+          - run:
+              name: Execute cloudfront.yml
+              command: |
+                aws cloudformation deploy \
+                --template-file cloudfront.yml \
+                --stack-name production-distro \
+                --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"          
 
   workflows:
     myWorkflow:
@@ -89,6 +102,5 @@
         #- configure_infrastructure
         #- smoke_test
         #- create_and_deploy_front_end
-        - get_last_deployment_id
-        
-      
+        #- get_last_deployment_id
+        - promote_to_production
