--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,23 @@
                 aws cloudformation deploy \
                 --template-file cloudfront.yml \
                 --stack-name production-distro \
-                --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"          
+                --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"     
+
+      clean_up_old_front_end:
+        docker:
+          - image: amazon/aws-cli
+        steps:
+          - checkout
+          - run: yum install -y tar gzip
+          - attach_workspace:
+              at: ~/
+          - run:
+              name: Destroy the previous production version's S3 bucket and CloudFormation stack. 
+              # Use $OldBucketID environment variable or mybucket644752792305 below.
+              # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
+              command: |
+                export OldBucketID=$(cat ~/textfile.txt)
+                aws s3 rm "s3://${OldBucketID}" --recursive               
 
   workflows:
     myWorkflow:
@@ -101,6 +117,13 @@
         #- create_infrastructure
         #- configure_infrastructure
         #- smoke_test
-        #- create_and_deploy_front_end
-        #- get_last_deployment_id
-        - promote_to_production
+        - create_and_deploy_front_end
+        - promote_to_production:
+            requires: 
+              - create_and_deploy_front_end
+        - get_last_deployment_id
+        - clean_up_old_front_end:
+            requires:
+              - get_last_deployment_id
+              - promote_to_production
+      
