Clean up old front end

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@
               # Use $OldBucketID environment variable or mybucket644752792305 below.
               # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
               command: |
-                export myawsbucket-prod=$(cat ~/textfile.txt)
+                export OldBucketID=$(cat ~/textfile.txt)
                 aws s3 rm "s3://myawsbucket-prod" --recursive               
 
   workflows:
